--- a/grove-ctrl/webapp/package.json
+++ b/grove-ctrl/webapp/package.json
@@ -4,10 +4,10 @@
   "description": "A webapp demonstrating monitoring and control of some grove equipement via Eclipse Ditto.",
   "main": "index.html",
   "dependencies": {
-    "bootstrap": "^4.0.0-beta",
+    "bootstrap": "^4.1.3",
     "font-awesome": "4.7.0",
     "jquery": "^3.2.1",
-    "popper.js": "^1.12.5"
+    "popper.js": "^1.14.3"
   },
   "devDependencies": {},
   "scripts": {
