--- a/payload-mapping-testing/pom.xml
+++ b/payload-mapping-testing/pom.xml
@@ -10,6 +10,8 @@
 
     <properties>
         <ditto.version>0.8.0</ditto.version>
+        <junit.version>4.12</junit.version>
+        <assertj.version>3.12.2</assertj.version>
     </properties>
 
     <dependencies>
@@ -21,14 +23,14 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>${junit.version}</version>
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>3.12.2</version>
+            <version>${assertj.version}</version>
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
