finished example about adding an own, custom based protobuf payload mapper to Ditto
Co-authored-by: Stanchev Aleksandar <aleksandar.stanchev@bosch.io>
Signed-off-by: Thomas Jaeckle <thomas.jaeckle@bosch.io>

--- a/custom-ditto-java-payload-mapper/connectivity-extension.conf
+++ b/custom-ditto-java-payload-mapper/connectivity-extension.conf
@@ -1,5 +1,8 @@
 ditto {
   extensions {
-    # TODO TJ add custom MessageMapper via extension mechanism!
+    message-mapper-provider.extension-config {
+      # adds our custom MessageMapper to the already existing list of "message-mappers":
+      message-mappers += "org.eclipse.ditto.examples.custompayloadmapper.octopus.OctopusProtobufMessageMapper"
+    }
   }
 }
