--- a/custom-ditto-java-payload-mapper/pom.xml
+++ b/custom-ditto-java-payload-mapper/pom.xml
@@ -22,7 +22,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <ditto.version>0-SNAPSHOT</ditto.version>
+        <ditto.version>3.0.0</ditto.version>
         <protobuf.version>3.21.6</protobuf.version>
 
         <junit.version>4.13.2</junit.version>
